--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>11</div>
-    <div>1111</div>
-    
-    
-</body>
+<html>
+  <body>
+    <iframe src="lib/hello.html" width="200" height="200" />
+  </body>
 </html>
